# lockbook-dev

./: .gitignore  .scalafmt.conf  .travis.yml  BUILD  BUILD.bazel  README.md  WORKSPACE  build.gradle  build.sbt  settings.gradle  update.sql
.metals/: metals.lock.db
ci/: dist_linux.sh  dist_mac_os.sh
gradle/wrapper/: gradle-wrapper.properties
src/main/resources/: dark.css  icon.icns  light.css  markdown.css
src/main/scala/devbook/: AlertUi.scala  App.scala  Editor.scala  EditorHelper.scala  EditorUi.scala  Encryption.scala  EncryptionHelper.scala  Errors.scala  Events.scala  FileExplorer.scala  FileHelper.scala  FileTreeUi.scala  GitCredentialHelper.scala  GitCredentialUi.scala  GitHelper.scala  Lockfile.scala  LockfileHelper.scala  NewDevbookUI.scala  NewPasswordUi.scala  PasswordHelper.scala  PasswordPrompt.scala  PasswordStream.scala  PasswordUI.scala  RepositoryList.scala  RepositoryUI.scala  RepositoryUi.scala  UI.scala  UIEvents.scala  UiOrchestrator.scala  UnlockUi.scala
src/main/scala/example/: Hello.scala
src/main/scala/lockbook/dev/: AlertUi.scala  App.scala  CancelableAction.scala  CloneRepoDialog.scala  DefaultSettings.scala  DialogUi.scala  DoInBackgroundWithMouseSpinning.scala  EditorHelper.scala  EditorUi.scala  EncryptionHelper.scala  Errors.scala  FileHelper.scala  FileTreeUi.scala  GitCredentialHelper.scala  GitCredentialUi.scala  GitHelper.scala  Launcher.scala  LockbookError.scala  LockfileHelper.scala  NewPassphraseUi.scala  NewPasswordUi.scala  PassphraseHelper.scala  PasswordHelper.scala  (+8 more)
src/test/scala/devbook/: LibrarySuite.scala
(+2 files in other folders)
