load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library")


scala_binary(
    name = "app",
    main_class = "hello.Application",
    runtime_deps = [
		"@maven//:org_openjfx_javafx_controls_mac",
		"@maven//:org_openjfx_javafx_graphics_mac",
		"@maven//:org_openjfx_javafx_base_mac"
    ],
)
